--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,14 @@ h2 {
   color: #cbd5e1;
 }
 
+.card img {
+  display: block;
+  margin: 25px 0 30px 0; /* espacio arriba y abajo */
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 /* ---------- TECH STACK TEXT ---------- */
 
 .footer-text {
@@ -99,8 +107,8 @@ h2 {
 /* ---------- BUTTON ---------- */
 
 .btn {
-  display: block;      /* antes estaba inline-block */
-  margin-top: 25px;    /* espacio respecto a la imagen */
+  display: inline-block;    /* antes estaba inline-block */
+  margin-top: 15px;    /* espacio respecto a la imagen */
   width: fit-content;  /* para que no ocupe todo el ancho */
   margin-bottom: 40px; 
   padding: 10px 18px;
