--- a/css/styles.css
+++ b/css/styles.css
@@ -90,8 +90,9 @@ h2 {
 
 .card img {
   display: block;
-  margin: 25px 0 30px 0; /* espacio arriba y abajo */
-  max-width: 100%;
+  margin: 25px auto 30px auto; /* centrada */
+  max-width: 900px;           /* límite real */
+  width: 100%;                /* responsive */
   height: auto;
   border-radius: 10px;
 }
