--- a/css/styles.css
+++ b/css/styles.css
@@ -63,14 +63,14 @@ h2 {
   margin-bottom: 30px;
   font-size: 24px;
 }
-
+/*
 .card h4 {
   margin-top: 35px;
   margin-bottom: 15px;
   font-size: 18px;
   color: #e2e8f0;
 }
-
+*/
 .card p {
   margin-bottom: 20px;
   max-width: 850px; /* 👈 CLAVE: limita ancho del texto */
